change modal and fix some problem

--- a/components/orderModalAddress/orderModalAddress.module.css
+++ b/components/orderModalAddress/orderModalAddress.module.css
@@ -234,7 +234,7 @@
 
   .submit_container {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 
     flex-direction: column;
     gap: 20px;
