--- a/components/modalOrderCheckout/modal-checkout.module.css
+++ b/components/modalOrderCheckout/modal-checkout.module.css
@@ -1,3 +1,5 @@
+/* ------ Main styles ------ */
+
 .overlay {
   position: fixed;
   top: 0;
@@ -22,14 +24,16 @@
   padding: 24px 24px 0px 24px;
 }
 
-@media screen and (min-width: 744px) {
-  .modal {
-    width: 622px;
-  }
-}
-
 .container_button {
   position: relative;
   display: flex;
   justify-content: right;
+}
+
+/* ------ Media rules ------ */
+
+@media screen and (min-width: 744px) {
+  .modal {
+    width: 622px;
+  }
 }
