fixed order styles & logic, step 2

--- a/components/modalOrderCheckout/modal-checkout.module.css
+++ b/components/modalOrderCheckout/modal-checkout.module.css
@@ -30,6 +30,12 @@
   justify-content: right;
 }
 
+/* .button:hover,
+.button:focus {
+  fill: red;
+  color: red;
+} */
+
 /* ------ Media rules ------ */
 
 @media screen and (min-width: 744px) {
