--- a/components/orderModalCard/orderModalCard.module.css
+++ b/components/orderModalCard/orderModalCard.module.css
@@ -5,11 +5,7 @@
   border: 1px solid var(--black);
 }
 
-.input,
-.error_input,
-.big_input,
-.small_input,
-.building_unit {
+.input {
   width: 100%;
   border-radius: 8px;
   height: 32px;
@@ -20,27 +16,13 @@
   font-weight: 400;
 }
 
-.error,
-.label,
-.subtotal {
+.label {
   font-family: var(--font);
   font-size: 12px;
   font-weight: 400;
 }
 
-.header_contact,
-.header_delivery,
-.header_payment,
-.pay_button {
-  font-family: var(--font);
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.label_checkbox,
-.payment_checkbox,
-.save_checkbox,
-.price {
+.label_checkbox {
   font-family: var(--font);
   font-size: 16px;
   font-weight: 500;
@@ -50,15 +32,7 @@
 .label_checkbox,
 .inputs_container,
 .label,
-.flex_inputs_container,
-.input_container_flex,
-.save_checkbox,
-.submit_container,
-.price_container,
-.pay_button,
-.payment_container,
-.icons_container,
-.payment_checkbox {
+.flex_inputs_container {
   display: flex;
   color: grey;
   font-size: 12px;
@@ -67,64 +41,15 @@
 
 /* ------ Main styles ------ */
 
-.error_input {
-  border: 1px solid var(--red);
-}
-
-.error {
-  margin-left: 4px;
-  margin-top: 10px;
-  color: var(--red);
-}
-
 .form {
   max-width: 328px;
   margin: 0 auto;
   margin-bottom: 92px;
 }
 
-.input_container_region {
-  display: flex;
-
-  justify-content: space-between;
-  gap: 10px;
-}
-
-@media screen and (min-width: 744px) {
-  .input_container_region {
-    flex-direction: row;
-    gap: 24px;
-  }
-}
-
-.input_region {
-  width: 100%;
-  border-radius: 8px;
-  height: 32px;
-  padding-left: 8px;
-  padding-right: 8px;
-  border: 1px solid var(--black);
-  font-size: 16px;
-  font-weight: 400;
-  margin-top: 4px;
-}
-
-@media screen and (min-width: 744px) {
-  .input_region {
-    width: 300px;
-  }
-}
-
 .input_container {
   width: 100%;
   gap: 52px;
-}
-
-@media screen and (min-width: 744px) {
-  .input_container {
-    width: 300px;
-    gap: 186px;
-  }
 }
 
 .header_contact {
@@ -141,6 +66,14 @@
   padding-right: 8px;
 
   border: 1px solid var(--black);
+}
+
+.input_date_code {
+  width: 138px;
+}
+
+.span {
+  margin-left: 4px;
 }
 
 .header_delivery {
@@ -166,136 +99,26 @@
   height: 24px;
 }
 
-.inputs_container {
-  flex-direction: column;
-  gap: 10px;
-}
-
-.label {
-  flex-direction: column;
-  color: var(--grey);
-}
-
-.span {
-  opacity: 0;
-  /* color: var(--black); */
-}
-
 .flex_inputs_container {
   flex-direction: column;
   gap: 10px;
 }
 
-.input_container_flex {
-  width: 100%;
-  justify-content: space-between;
-}
-
-.form_container {
-  margin-bottom: 44px;
-}
-
-.payment_checkbox {
-  flex-direction: row-reverse;
-  justify-content: left;
-  gap: 16px;
-  margin-bottom: 40px;
-}
-
-.save_checkbox {
-  flex-direction: row-reverse;
-  justify-content: left;
-  gap: 16px;
-  margin-top: 44px;
-
-  text-transform: uppercase;
-}
-
-.submit_container {
-  margin-top: 16px;
-  align-items: center;
-  margin-bottom: 40px;
-}
-
-.price_container {
-  gap: 40px;
-  margin-right: 28px;
-  color: var(--black);
-}
-
-.subtotal {
-  font-size: 18px;
-}
-
-.price {
-  font-size: 18px;
-  color: var(--black);
-}
-
-.pay_button {
-  justify-content: center;
-  align-items: center;
-
-  width: 180px;
-  padding: 8px 24px;
-
-  background-color: var(--disabled);
-  border-radius: 50px;
-
-  font-size: 16px;
-
-  text-transform: uppercase;
-}
-
-.payment_container {
-  justify-content: space-between;
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
-
-.icons_container {
-  gap: 40px;
-}
-
 /* ------ Media rules ------ */
 
 @media screen and (min-width: 744px) {
-  .pay_button {
-    font-size: 24px;
-    padding: 16px 32px;
+  .input_container_region {
+    flex-direction: row;
+    gap: 24px;
   }
 
-  .price {
-    font-size: 32px;
-  }
-
-  .subtotal {
-    font-size: 32px;
-  }
-
-  .price_container {
-    margin-right: 0;
-  }
-
-  .submit_container {
-    display: flex;
-    align-items: end;
-
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .big_input {
+  .input_region {
     width: 300px;
-    margin-bottom: 0;
   }
 
-  .building_unit {
-    width: 138px;
-  }
-
-  .small_input {
-    width: 138px;
+  .input_container {
+    width: 300px;
+    gap: 180px;
   }
 
   .input_container {
@@ -305,34 +128,16 @@
     justify-content: space-between;
   }
 
-  .error {
-    margin-top: 8px;
-  }
-
   .form {
     max-width: 462px;
-  }
-
-  .header_delivery {
-    margin-top: 28px;
-    margin-bottom: 24px;
   }
 
   .inputs_container {
     gap: 6px;
   }
-
-  .form_container {
-    width: 462px;
-    margin: 0 auto;
-  }
 }
 
 @media screen and (min-width: 1440px) {
-  .submit_goods_container {
-    width: 624px;
-  }
-
   .form {
     width: 462px;
     display: flex;
@@ -344,8 +149,5 @@
   .form {
     display: flex;
     gap: 348px;
-
-    /* margin-left: 162px; */
-    /* width: 786px; */
   }
 }
