--- a/app/profile/components/order/tableMobile/tableMobile.module.css
+++ b/app/profile/components/order/tableMobile/tableMobile.module.css
@@ -37,6 +37,7 @@
   .rowCellTable {
     font-weight: 600;
     line-height: 20px;
+    border-bottom: 2px solid var(--grey);
   }
   .rowCellTable p {
     font-weight: 400;
