--- a/app/profile/components/order/order-history.module.css
+++ b/app/profile/components/order/order-history.module.css
@@ -64,4 +64,14 @@
   .orderContainer {
     padding: 0;
   }
+
+  .aboveTableBlock {
+    flex-direction: column;
+    align-items: flex-end;
+    margin-bottom: 8px;
+  }
+  .title {
+    align-self: start;
+    margin-bottom: 28px;
+  }
 }
