--- a/app/profile/components/side-bar/side-bar.module.css
+++ b/app/profile/components/side-bar/side-bar.module.css
@@ -91,3 +91,13 @@
     font-size: 16px;
   }
 }
+
+@media (max-width: 743.99px) {
+  .profile__list {
+    margin-left: 16px;
+  }
+  .profile__name,
+  .profile__email {
+    margin-left: 10px;
+  }
+}
