add mobile adaptive for Payment and Deliver

--- a/app/profile/[userId]/profile.module.css
+++ b/app/profile/[userId]/profile.module.css
@@ -25,4 +25,10 @@
   .profile {
     padding: 0px 0px 37px 0px;
   }
+  .profile__wrapper {
+    grid-template-columns: 1fr;
+    max-width: 348px;
+    margin: 0 auto;
+    padding: 0 10px;
+  }
 }
