--- a/components/sorting/sorting.module.css
+++ b/components/sorting/sorting.module.css
@@ -1,9 +1,45 @@
 .sort {
+  position: relative;
   display: grid;
   grid-template-columns: 18.125rem auto 245px;
   column-gap: 2.25rem;
   padding: 1.375rem 0;
   margin-bottom: 8px;
+}
+
+.sort__filter {
+  width: 13.125rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  border-radius: 25px;
+  border: 1px solid var(--black);
+  background: var(--white);
+}
+
+.filter__svg {
+  transition: transform .3s ease-in-out;
+  transform-origin: center center;
+}
+
+.sort__filter.active .filter__svg {
+  transform: rotate(180deg);
+}
+
+.sort__modal {
+  /* display: none; */
+  position: absolute;
+  margin: 80px;
+  z-index: 5;
+}
+
+.sort__modal.open {
+  display: block;
 }
 
 .sort__reset {
@@ -18,16 +54,16 @@
   font-size: 1rem;
 }
 
-.reset__btn {  
+.reset__btn {
   padding: 0.5rem 0.75rem;
   border-radius: 3.125rem;
-  border: 0.0625rem solid #F00;
+  border: 0.0625rem solid #f00;
   background-color: var(--white);
 
   font-weight: 600;
   font-size: 0.875rem;
   text-transform: uppercase;
-  color: #F00;
+  color: #f00;
 }
 
 .sort__list {
@@ -71,5 +107,8 @@
   }
   .filter__select {
     width: 110px;
-}
+  }
+  .sort__filter {
+    width: 110px;
+  }
 }
